hardware/hhb_ip_repository/cache_module/cache_module/cache_module.log
==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2013.4
Copyright (C) 2013 Xilinx Inc. All rights reserved.

==============================================================

@I [HLS-10] Setting target device to 'xc7z020clg484-1'
@I [SYN-201] Setting up clock 'default' with a period of 10ns.
@W [HLS-40] Cannot find source file cache_module_top.cpp; skipping it.
@I [HLS-10] Analyzing design file 'cache_module/src/cache_module_top.cpp' ... 
@E [HLS-70] Compilation errors found:
cache_module/src/cache_module_top.cpp:15:1: warning: declaration does not declare anything [-Wmissing-declarations]
typedef struct cache_entry //Defines a signle entry of the application cache.
^~~~~~~
cache_module/src/cache_module_top.cpp:71:24: error: member reference base type 'int' is not a structure or union
        if(hb_cache[i].AppID == AppID)
           ~~~~~~~~~~~ ^
cache_module/src/cache_module_top.cpp:74:30: error: no viable overloaded '='
            temp_cache_entry = hb_cache[i];
            ~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~
cache_module/src/cache_module_top.cpp:15:16: note: candidate function (the implicit copy assignment operator) not viable: no known conversion from 'int' to 'const cache_entry' for 1st argument; 
typedef struct cache_entry //Defines a signle entry of the application cache.
               ^
1 warning and 2 errors generated.
@I [LIC-101] Checked in feature [VIVADO_HLS]
